customed show offers page, aligned items correctly and btn-delete designed in CSS

--- a/app/assets/stylesheets/pages/_search.scss
+++ b/app/assets/stylesheets/pages/_search.scss
@@ -10,6 +10,7 @@
 .sticky-map {
   height: 100vh;
   position: sticky !important;
+  z-index: 3;
   top: 0px;
   flex: 0 0 33%;
 }
