--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -62,6 +62,10 @@
   line-height: 1;
 }
 
+.btn-delete {
+  margin-top: 20px;
+}
+
 .offer-btn:hover {
   background-color: #99CC99;
   border: 1px solid white;
